syntax = "proto3";

package mycelium_grpc;

import "common.proto";

message CopyRequest {
  PeerId target_peer = 1;
  PostId post_id = 2;
}

message CopyResponse {
  bool success = 1;
  string message = 2;
}
