syntax = "proto3";

package mycelium_grpc;

import "common.proto";

message EchoRequest { PostId copied_post_id = 1; }

message EchoResponse {
  bool success = 1;
  string message = 2;
}
