syntax = "proto3";

package mycelium_grpc;

import "common.proto";
import "copy.proto";
import "echo.proto";

// Mycelium gRPC service definition
service MyceliumService {
  // Copy a post (user-initiated memory replication)
  rpc CopyPost(CopyRequest) returns (CopyResponse);

  // Echo a post (re-broadcast an already copied post)
  rpc EchoPost(EchoRequest) returns (EchoResponse);
}
